# python39_ds_template

./: .gitignore  .pre-commit-config.yaml]  Dockerfile  Makefile  poetry.lock.rich  pyproject.toml  pyproject.toml.rich  setup.cfg
.devcontainer/: devcontainer.json
