[tool.poetry]
name = "python39_ds_template"
version = "0.1.0"
description = ""
authors = ["Takuto Sugisaki <tsintermax@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
lightgbm = "^3.3.2"
dbt-bigquery = "^1.1.0"
scikit-learn = "^1.1.3"
japanize-matplotlib = "^1.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
